@@ -138,48 +138,51 @@
    (STOP)
    )
 (CHARSINTYPE O 1
-   U 214B U 214D U 214F U 2151 U 2153 U 2155 U 2157 U 2159 U 215B
+   U 3009 U 300B U 300D U 300F U 3011 U 3015 U 3017 U 3019 U 301F U FF09
+   U FF3D U FF5D U FF60
    )
 (CHARSINTYPE O 2
-   U 212B U 212C
+   U 309B U 309C
    )
 (CHARSINTYPE O 3
-   U 2136 U 2137 U 2139 U 2168 U 2169 U 216A U 2170 U 2171 U 2172 U 2421
-   U 2423 U 2425 U 2427 U 2429 U 2443 U 2463 U 2465 U 2467 U 246E U 2521
-   U 2523 U 2525 U 2527 U 2529 U 2543 U 2563 U 2565 U 2567 U 256E U 2575
-   U 2576
+   U 2234 U 2640 U 2642 U 3003 U 3005 U 3041 U 3043 U 3045 U 3047 U 3049
+   U 3063 U 3083 U 3085 U 3087 U 308E U 3095 U 3096 U 309E U 30A1 U 30A3
+   U 30A5 U 30A7 U 30A9 U 30C3 U 30E3 U 30E5 U 30E7 U 30EE U 30F5 U 30F6
+   U 31F0 U 31F1 U 31F2 U 31F3 U 31F4 U 31F5 U 31F6 U 31F7 U 31F8 U 31F9
+   U 31FA U 31FB U 31FC U 31FD U 31FE U 31FF U FF04 U FFE0 U FFE1
    )
 (CHARSINTYPE O 4
-   U 2126 U 2127 U 2128 U 212A U 212D U 212E U 213E U 2142 U 2143 U 2146
-   U 2147
+   U 00B4 U 2010 U 2016 U 2018 U 2019 U 30FB U FF01 U FF1A U FF1B U FF40
+   U FF5C
    )
 (CHARSINTYPE O 5
-   U 2129 U 212F U 2130 U 2133 U 2135 U 2148 U 2149 U 216B U 216C U 216D
-   U 2178
+   U 00A7 U 00A8 U 00B0 U 201C U 201D U 2032 U 2033 U 309D U 30FD U FF1F
+   U FF3E
    )
 (CHARSINTYPE O 6
-   U 214A U 214C U 214E U 2150 U 2152 U 2154 U 2156 U 2158 U 215A
+   U 3008 U 300A U 300C U 300E U 3010 U 3014 U 3016 U 3018 U 301D U FF08
+   U FF3B U FF5B U FF5F
    )
 (CHARSINTYPE O 7
-   U 2426 U 242F U 2430 U 2431 U 2432 U 2439 U 243A U 246A U 2546 U 2547
-   U 2564
+   U 3046 U 304F U 3050 U 3051 U 3052 U 3059 U 305A U 308A U 30C6 U 30C7
+   U 30E4
    )
 (CHARSINTYPE O 10
-   U 2124 U 2125
+   U FF0C U FF0E
    )
 (CHARSINTYPE O 11
-   U 2122 U 2123
+   U 3001 U 3002
    )
 (CHARSINTYPE O 12
-   U 2522 U 2524 U 2526 U 252A U 2531 U 2532 U 2535 U 2536 U 253D U 253E
-   U 2541 U 2542 U 2544 U 2545 U 2548 U 2549 U 254A U 2555 U 2556 U 2557
-   U 255F U 2561 U 2569 U 256A U 256F U 2572
+   U 30A2 U 30A4 U 30A6 U 30AA U 30B1 U 30B2 U 30B5 U 30B6 U 30BD U 30BE
+   U 30C1 U 30C2 U 30C4 U 30C5 U 30C8 U 30C9 U 30CA U 30D5 U 30D6 U 30D7
+   U 30DF U 30E1 U 30E9 U 30EA U 30EF U 30F2
    )
 (CHARSINTYPE O 13
-   U 252F U 2530 U 253F U 2540
+   U 30AF U 30B0 U 30BF U 30C0
    )
 (CHARSINTYPE O 14
-   U 254E
+   U 30CE
    )
 (TYPE O 0
    (CHARWD R 0.962216)
