@@ -116,32 +116,34 @@
    (STOP)
    )
 (CHARSINTYPE O 1
-   U 2124 U 2125
+   U FF0C U FF0E
    )
 (CHARSINTYPE O 2
-   U 2122 U 2123
+   U 3001 U 3002
    )
 (CHARSINTYPE O 3
-   U 2133 U 2134 U 2135 U 2136 U 2137 U 2139 U 2421 U 2423 U 2425 U 2427
-   U 2429 U 2443 U 2463 U 2465 U 2467 U 246E U 2521 U 2523 U 2525 U 2527
-   U 2529 U 2543 U 2563 U 2565 U 2567 U 256E U 2575 U 2576
+   U 3003 U 3005 U 3041 U 3043 U 3045 U 3047 U 3049 U 3063 U 3083 U 3085
+   U 3087 U 308E U 3095 U 3096 U 309D U 309E U 30A1 U 30A3 U 30A5 U 30A7
+   U 30A9 U 30C3 U 30E3 U 30E5 U 30E7 U 30EE U 30F5 U 30F6 U 30FD U 30FE
+   U 31F0 U 31F1 U 31F2 U 31F3 U 31F4 U 31F5 U 31F6 U 31F7 U 31F8 U 31F9
+   U 31FA U 31FB U 31FC U 31FD U 31FE U 31FF
    )
 (CHARSINTYPE O 4
-   U 2129 U 212A
+   U FF01 U FF1F
    )
 (CHARSINTYPE O 5
-   U 213D U 2144 U 2145
+   U 2015 U 2025 U 2026
    )
 (CHARSINTYPE O 6
-   U 2146 U 2148 U 214A U 214C U 214E U 2150 U 2152 U 2154 U 2156 U 2158
-   U 215A
+   U 2018 U 201C U 3008 U 300A U 300C U 300E U 3010 U 3014 U 3016 U 3018
+   U 301D U FF08 U FF3B U FF5B U FF5F
    )
 (CHARSINTYPE O 7
-   U 2126 U 213E U 2142 U 2143
+   U 2010 U 2016 U 30FB U FF5C
    )
 (CHARSINTYPE O 10
-   U 2147 U 2149 U 214B U 214D U 214F U 2151 U 2153 U 2155 U 2157 U 2159
-   U 215B
+   U 2019 U 201D U 3009 U 300B U 300D U 300F U 3011 U 3015 U 3017 U 3019
+   U 301F U FF09 U FF3D U FF5D U FF60
    )
 (TYPE O 0
    (CHARWD R 0.962216)
